--- a/李宏毅机器学习.md
+++ b/李宏毅机器学习.md
@@ -72,7 +72,7 @@
 
 - 判断方法：Hessian矩阵是二次微分矩阵
 
-  <img src="../../AppData/Roaming/Typora/typora-user-images/image-20210312155725425.png" alt="image-20210312155725425" style="zoom:80%;" />
+  <img src="https://yumytest.oss-cn-chengdu.aliyuncs.com/img/image-20210312155725425.png" alt="image-20210312155725425" style="zoom:80%;" />
 
   - 当我们抵达critical point即梯度为0的时候，绿色这一项为0，可以通过红色部分来判断当前是局部最优还是鞍点
 
@@ -112,7 +112,7 @@
 
 - 原则：梯度变化平缓，学习率设置大一点；反之，小一点
 
-  <img src="../../AppData/Roaming/Typora/typora-user-images/image-20210316100705186.png" alt="image-20210316100705186" style="zoom:80%;" />
+  <img src="https://yumytest.oss-cn-chengdu.aliyuncs.com/img/image-20210316100705186.png" alt="image-20210316100705186" style="zoom:80%;" />
 
 - Adagrad方法：
 
@@ -212,47 +212,96 @@
 
 - 前面看到的输入都一样长，那么如果输入不一样长的序列会怎么办呢
   - 举例：输入序列this is a cat
-    - 独热向量：一个词占一个维度，但没有突出单词间的关系
-    - word embedding：每个词一个向量，同类词距离更近
+    - 表示方法——独热向量：一个词占一个维度，但没有突出单词间的关系
+    - word embedding：每个词一个向量（包含语义），同类词进行聚类【一句话就是长度不一的向量】
   - 举例：音频、图结构（社交网络）、分子结构
 - 输出情况：
-  - 一个向量对应一个label【sequence labeling】：如POS tagging（标词性）、声音识别（HW2）
-  - 所有向量对应一个label：Sentiment analysis（情感分析）、语音辨认
+  - 一个向量对应一个label【sequence labeling】：如POS tagging（标词性）、声音识别（HW2）、社交网络图
+  - 所有向量对应一个label：Sentiment analysis（情感分析）、语音辨认、判断分子是什么
   - 模型决定输出长度：【seq2seq】（HW5）
 
 ### 自注意力
 
+https://www.youtube.com/watch?v=hYdO9CscNes
+
+#### 先前做法
+
+考虑输入输出一样的情况【sequence labeling】
+
+- 先前做法：分别对每一个sequence进行FC，独立判断这个sequence的输出
+
+- 但是sequence之间是有联系的，因此得考虑context
+
+- 因此当前FC可以给当前和前后向量，如下图
+
+  <img src="https://yumytest.oss-cn-chengdu.aliyuncs.com/img/image-20210326152046725.png" alt="image-20210326152046725" style="zoom:67%;" />
+
+  问题：输入序列长度不一致，全面概括需要大量参数
+
+#### 引入自注意力
+
 <img src="https://yumytest.oss-cn-chengdu.aliyuncs.com/img/image-20210318151209129.png" alt="image-20210318151209129" style="zoom:67%;" />
 
-- 可交替/叠加使用
+- self-attention可交替/叠加使用（多次使用）
 
 - 内部结构
 
+  - a1~a4可能时输入层，也可能是隐藏层
+
   <img src="https://yumytest.oss-cn-chengdu.aliyuncs.com/img/image-20210318151415172.png" alt="image-20210318151415172" style="zoom:67%;" />
 
-- b1考虑与a1相关的句子（用α评估两个句子的相关程度）
+  - 那么怎么考虑b1与a1相关的向量之间得关联性呢?
 
-- 评估相关程度的方法：
+- 评估相关程度$\alpha$的方法：
 
-  - Dot-product（最常用）
+  - $\alpha$代表两个向量之间的关联程度
 
-  - Additive
+  - Dot-product（最常用）：向量乘W矩阵，得到qk点乘后得到α
+
+  - Additive：
 
     <img src="https://yumytest.oss-cn-chengdu.aliyuncs.com/img/image-20210318151807291.png" alt="image-20210318151807291" style="zoom:67%;" />
 
 - 具体做法：
 
-  <img src="https://yumytest.oss-cn-chengdu.aliyuncs.com/img/image-20210318151949157.png" alt="image-20210318151949157" style="zoom:67%;" />![image-20210318152052851](https://yumytest.oss-cn-chengdu.aliyuncs.com/img/image-20210318152052851.png)
+  - 计算a1与a2~a4之间的关联性
 
-  <img src="https://yumytest.oss-cn-chengdu.aliyuncs.com/img/image-20210318152147227.png" alt="image-20210318152147227" style="zoom:67%;" />![image-20210318152339780](https://yumytest.oss-cn-chengdu.aliyuncs.com/img/image-20210318152339780.png)
+    <img src="https://yumytest.oss-cn-chengdu.aliyuncs.com/img/image-20210318151949157.png" alt="image-20210318151949157" style="zoom:67%;" />
 
-  ​	<img src="https://yumytest.oss-cn-chengdu.aliyuncs.com/img/image-20210318152403951.png" alt="image-20210318152403951" style="zoom:67%;" />
+  - 一般自己跟自己也计算关联性（可实验）
 
-  - 先计算attention score
-  - 再使用softmax
-  - 最后提取关键信息
+  - 使用softmax进行normalization
+  
+    <img src="https://yumytest.oss-cn-chengdu.aliyuncs.com/img/image-20210318152052851.png" alt="image-20210318152052851" style="zoom:67%;" />
+  
+  - 基于attention分数抽取重要资讯：attention分数越大，在最终信息中占比就越大
+  
+    <img src="https://yumytest.oss-cn-chengdu.aliyuncs.com/img/image-20210318152339780.png" alt="image-20210318152339780" style="zoom:67%;" />
+  
+  ​	
+  
+
+# Theory of ML
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+# Transformer
 
 
 
