add hw3 and hw4

--- a/李宏毅机器学习.md
+++ b/李宏毅机器学习.md
@@ -254,11 +254,7 @@ https://www.youtube.com/watch?v=hYdO9CscNes
 
 - 评估相关程度$\alpha$的方法：
 
-  - $\alpha$代表两个向量之间的关联程度
-
-  - Dot-product（最常用）：向量乘W矩阵，得到qk点乘后得到α
-
-  - Additive：
+  - $\alpha$代表  
 
     <img src="https://yumytest.oss-cn-chengdu.aliyuncs.com/img/image-20210318151807291.png" alt="image-20210318151807291" style="zoom:67%;" />
 
@@ -302,6 +298,232 @@ https://www.youtube.com/watch?v=hYdO9CscNes
 
 
 # Transformer
+
+## Normalization
+
+### Batch Normalization训练部分
+
+HW3（CNN）能用上
+
+- 问题：当不同特征的input值时大时小，导致权重w对于损失函数的变化也时大时小
+
+  怎么将输入放在同一个范围中呢
+
+  <img src="https://yumytest.oss-cn-chengdu.aliyuncs.com/img/image-20210330145852476.png" alt="image-20210330145852476" style="zoom:67%;" />
+
+- 方法：Feature Normalization 
+
+  将同一维度，不同特征的变量标准化【标准化】
+
+  <img src="https://yumytest.oss-cn-chengdu.aliyuncs.com/img/image-20210330150249812.png" alt="image-20210330150249812" style="zoom:67%;" />
+
+- 细节：Normalization放在激活函数前后都可
+
+- 引入BN：引入均值和方差（都是向量），参数也更多，一般是一次batch算一次，也叫batch normalization
+
+### 测试部分
+
+- 使用moving average来计算均值和方差，pytorch中自动计算
+
+  <img src="https://yumytest.oss-cn-chengdu.aliyuncs.com/img/image-20210330151521760.png" alt="image-20210330151521760" style="zoom:67%;" />
+
+- 为什么BN有用？
+
+  看paper，貌似是一个偶然的发现2333333
+
+
+
+## Transformer
+
+### 简介
+
+- Seq2seq模型：模型决定输出长度
+- 应用：
+
+  - 语音识别【语音转文字】
+  - 机器翻译【文字转文字】
+  - 语音翻译【语音另一种文字】（因为有些语言没有文字）
+  - 语音合成【文字转语音】
+  - 聊天机器人【input->seq2seq->reply】
+  - QA【question & context->seq2seq->answer】
+  - 文法剖析【硬 train 一發 】论文：Grammar as a foreign language
+  - multi-lable classification【自己决定label数】
+  - 目标检测【https://arxiv.org/abs/2005.12872】
+- seq2seq起源：https://arxiv.org/abs/1409.3215
+
+### encoder
+
+- encoder部分==bert的结构：
+
+  <img src="https://yumytest.oss-cn-chengdu.aliyuncs.com/img/image-20210416173444271.png" alt="image-20210416173444271" style="zoom:67%;" />
+
+  - 结构变化相关论文：
+    - https://arxiv.org/abs/2002.04745  【On Layer Normalization in the Transformer Architecture】
+    - https://arxiv.org/abs/2003.07845 【PowerNorm: Rethinking Batch Normalization in Transformers】
+
+### decoder
+
+- decoder架构：
+
+  <img src="https://yumytest.oss-cn-chengdu.aliyuncs.com/img/image-20210418162535707.png" alt="image-20210418162535707" style="zoom:67%;" />
+
+  首先，给decoder一个Begin Of Sentences(自己设计的独热向量)，然后通过decoder输出序列向量，再经过softmax，选出可能性最大的预测值，并将输出作为下一次的输入
+
+- 结构：
+
+  <img src="https://yumytest.oss-cn-chengdu.aliyuncs.com/img/image-20210418165505367.png" alt="image-20210418165505367" style="zoom:67%;" />
+
+- masked self-attention：做attention时只考虑前面的序列，如下图生成b2时之关注a1和a2
+
+  <img src="https://yumytest.oss-cn-chengdu.aliyuncs.com/img/image-20210418165425721.png" alt="image-20210418165425721" style="zoom:67%;" />
+
+- 怎么让他停止产生序列？
+
+  设置end标识符
+
+  <img src="https://yumytest.oss-cn-chengdu.aliyuncs.com/img/image-20210418165816847.png" alt="image-20210418165816847" style="zoom:67%;" />
+
+- AT(autogressive) vs NAT：
+
+  <img src="https://yumytest.oss-cn-chengdu.aliyuncs.com/img/image-20210418170104702.png" alt="image-20210418170104702" style="zoom:67%;" />
+
+  - NAT优势：并行性、可控输出长度、但通常比AT表现差
+
+- 传递部分：cross attention
+
+  <img src="https://yumytest.oss-cn-chengdu.aliyuncs.com/img/image-20210418170555481.png" alt="image-20210418170555481" style="zoom:67%;" />
+
+  - 关于cross attention不一定要从encoder的最后一层来融合的论文：https://arxiv.org/abs/2005.08081
+
+
+
+### 训练
+
+- 损失函数：最小化cross entropy
+
+- teacher forcing：将真实值当作decoder输入
+
+  <img src="https://yumytest.oss-cn-chengdu.aliyuncs.com/img/image-20210418172011357.png" alt="image-20210418172011357" style="zoom:67%;" />
+
+
+
+### tips
+
+- 复制机制：
+
+  - 聊天机器人（对于不懂得东西，直接复制）、总结
+
+  - 进一步了解↓
+
+    <img src="https://yumytest.oss-cn-chengdu.aliyuncs.com/img/image-20210418172313805.png" alt="image-20210418172313805" style="zoom: 50%;" />
+
+- guided attention：强迫学习到相关的样貌【monotonic attention、location-aware attention】
+
+- beam search
+
+  <img src="https://yumytest.oss-cn-chengdu.aliyuncs.com/img/image-20210418173244744.png" alt="image-20210418173244744" style="zoom:67%;" />
+
+- 原文训练时用BLUE score衡量而不是cross entropy，BLUE越大越好，衡量句子之间的距离。但BLUE不可微分，不能求导，用强化学习硬train吧
+
+  <img src="https://yumytest.oss-cn-chengdu.aliyuncs.com/img/image-20210418173927797.png" alt="image-20210418173927797" style="zoom:67%;" />
+
+- exposure bias：面临一步错步步错的问题，怎么办？
+
+  在训练的时候就加一些错误信息
+
+  <img src="https://yumytest.oss-cn-chengdu.aliyuncs.com/img/image-20210418174056060.png" alt="image-20210418174056060" style="zoom:67%;" />
+
+  解决：scheduled sampling
+
+  <img src="https://yumytest.oss-cn-chengdu.aliyuncs.com/img/image-20210418174132556.png" alt="image-20210418174132556" style="zoom:67%;" />
+
+# xxx
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
